<!--
  Copyright 2013 The Android Open Source Project

  Licensed under the Apache License, Version 2.0 (the "License");
  you may not use this file except in compliance with the License.
  You may obtain a copy of the License at

      http://www.apache.org/licenses/LICENSE-2.0

  Unless required by applicable law or agreed to in writing, software
  distributed under the License is distributed on an "AS IS" BASIS,
  WITHOUT WARRANTIES OR CONDITIONS OF ANY KIND, either express or implied.
  See the License for the specific language governing permissions and
  limitations under the License.
  -->

<resources>
    <string name="fetch_text">Refresh</string>
    <string name="clear_text">Clear</string>
    <string name="connection_error">Connection error.</string>
    <string name="line_id_label">Line id</string>
    <string name="line_id_value_default">1</string>
    <string name="vehicle_id_label">Vehicle id</string>
    <string name="vehicle_id_value_default">*</string>
    <string name="bus_stop_label">Bus stop id</string>
    <string name="bus_stop_value_default"></string>
    <string name="but_stop_help">You will be notified when your bus is approaching your bus stop</string>
    <string name="bus_stop_hint">for example: 1234</string>
</resources>
