<?xml version="1.0" encoding="utf-8"?>

<!--
  Copyright 2013 The Android Open Source Project

  Licensed under the Apache License, Version 2.0 (the "License");
  you may not use this file except in compliance with the License.
  You may obtain a copy of the License at

      http://www.apache.org/licenses/LICENSE-2.0

  Unless required by applicable law or agreed to in writing, software
  distributed under the License is distributed on an "AS IS" BASIS,
  WITHOUT WARRANTIES OR CONDITIONS OF ANY KIND, either express or implied.
  See the License for the specific language governing permissions and
  limitations under the License.
  -->

<LinearLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:orientation="vertical"
    android:layout_width="fill_parent"
    android:layout_height="fill_parent"
    android:layout_margin="6dp">

    <RelativeLayout
        android:orientation="vertical"
        android:layout_width="match_parent"
        android:layout_height="wrap_content">

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/line_id_label"
            android:id="@+id/textView"
            android:layout_alignParentLeft="true"
            android:layout_marginLeft="0dp"
            android:layout_alignParentTop="true"
            android:layout_marginTop="0dp"
            android:layout_alignBottom="@+id/lineId"
            android:layout_toLeftOf="@+id/lineId"
            android:layout_toStartOf="@+id/lineId"
            android:gravity="center_vertical" />

        <EditText
            android:id="@+id/lineId"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:inputType="number"
            android:ems="10"
            android:text="@string/line_id_value_default"
            android:layout_alignParentRight="true"
            android:layout_alignParentTop="true" />
    </RelativeLayout>

    <RelativeLayout
        android:orientation="vertical"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:gravity="right">

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/vehicle_id_label"
            android:id="@+id/textView5"
            android:layout_alignParentLeft="true"
            android:layout_marginLeft="0dp"
            android:gravity="center_vertical"
            android:layout_alignParentBottom="false"
            android:layout_toStartOf="@+id/vehId"
            android:layout_alignBottom="@+id/vehId"
            android:layout_alignParentTop="true"
            android:layout_toLeftOf="@+id/vehId" />

        <EditText
            android:id="@+id/vehId"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:inputType="text"
            android:ems="10"
            android:layout_alignParentRight="true"
            android:hint="esim. Paunu_160"
            android:text="@string/vehicle_id_value_default" />

    </RelativeLayout>

    <RelativeLayout
        android:orientation="vertical"
        android:layout_width="match_parent"
        android:layout_height="wrap_content">

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/bus_stop_label"
            android:id="@+id/textView7"
            android:layout_alignParentLeft="true"
            android:layout_marginLeft="0dp"
            android:layout_alignParentTop="true"
            android:layout_alignParentBottom="false"
            android:layout_toLeftOf="@+id/stopId"
            android:layout_alignBottom="@+id/stopId"
            android:gravity="center_vertical" />

        <EditText
            android:id="@+id/stopId"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:inputType="number"
            android:ems="10"
            android:layout_alignParentRight="true"
            android:layout_alignParentTop="true"
            android:layout_alignParentLeft="false"
            android:text="@string/bus_stop_value_default"
            android:hint="@string/bus_stop_hint" />

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:textAppearance="?android:attr/textAppearanceSmall"
            android:text="@string/but_stop_help"
            android:id="@+id/textView3"
            android:layout_below="@+id/stopId"
            android:gravity="right"
            android:layout_marginLeft="6dp"
            android:layout_marginRight="6dp" />
    </RelativeLayout>

    <View
        android:layout_width="fill_parent"
        android:layout_height="1dp"
        android:background="@android:color/darker_gray"/>

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:textAppearance="?android:attr/textAppearanceSmall"
        android:text="Debug log:"
        android:id="@+id/textView2" />

    <fragment
        android:name="com.example.android.common.logger.LogFragment"
        android:id="@+id/log_fragment"
        android:layout_weight="1"
        android:layout_width="match_parent"
        android:layout_height="match_parent" />

</LinearLayout>
